Make pseudo roles search values immutable